# AnomX

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: anomx-architecture.mdc  anomx-delivery-checklist.mdc  anomx-phase-scope.mdc  anomx-project-context.mdc  anomx-python-standards.mdc  anomx-windows-portability.mdc
.github/workflows/: ci.yml
config/: benchmark.yaml  detectors.yaml  settings.yaml
config/sources/: nab_cpu_utilization.yaml  online_retail_daily.yaml  pagila_rentals_hourly.yaml  postgres_observations_hourly.yaml  sample_csv.yaml
configs/streams/: kafka_sample.yaml
docker/: Dockerfile.api
docs/: architecture.md  demo-script.md
docs/decisions/: 001-polars-over-spark.md  002-dagster-asset-centric.md  003-lib-vs-services-split.md  004-redpanda-kafka-ingest.md  005-mlflow-prometheus-observability.md  006-dashboard-polish-readiness.md
examples/: quickstart.py
infra/postgres/: init.sql
infra/postgres/migrations/: 001_phase1_ingestion.sql
scripts/: download_nab_sample.py  generate_online_retail_sample.py  generate_sample_csv.py  publish_sample_to_kafka.py
services/api/: pyproject.toml
services/api/app/: config.py  dependencies.py  health.py  main.py  metrics.py  schemas.py
services/api/app/routes/: alerts.py  runs.py
services/api/app/workers/: enqueue.py  settings.py  tasks.py
services/api/tests/: test_alerts_api.py  test_health.py  test_runs_api.py
services/dashboard/: pyproject.toml
services/dashboard/app/: api_client.py  main.py  views.py
services/orchestrator/: pyproject.toml
services/orchestrator/anomx_orchestrator/: definitions.py
services/orchestrator/anomx_orchestrator/assets/: __init__.py  detect.py  ingest.py
services/orchestrator/tests/: test_definitions.py  test_paths.py  test_pipeline_assets.py
services/stream-worker/: pyproject.toml
services/stream-worker/anomx_stream_worker/: __init__.py  main.py  paths.py
