[project]
name = "anomx-workspace"
version = "0.1.0"
description = "AnomX monorepo workspace root"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.uv.workspace]
members = ["packages/anomx", "services/api"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/anomx", "services/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/anomx/tests", "services/api/tests"]
pythonpath = ["packages/anomx", "services/api"]
markers = [
    "integration: tests requiring PostgreSQL (docker compose up)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
