[project]
name = "anomx-api"
version = "0.1.0"
description = "AnomX REST API service"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anomx",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
anomx = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
