[project]
name = "anomx-dashboard"
version = "0.1.0"
description = "AnomX Streamlit dashboard"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anomx",
    "streamlit>=1.39",
    "httpx>=0.27",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
anomx = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
