[project]
name = "anomx-orchestrator"
version = "0.1.0"
description = "AnomX Dagster orchestration service"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anomx",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
anomx = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["anomx_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
